--- a/index.html
+++ b/index.html
@@ -6,37 +6,7 @@
     <title>Sacando una Sonrisa Más</title>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    
-    <style>
-        /* Estilos generales para simular tu estructura sin media queries complejas */
-        .img-cover {
-            width: 100%;
-            height: 400px; /* Ajustable en tu CSS aparte */
-            object-fit: cover;
-            border-radius: 8px;
-        }
-        .obj-img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-            border-radius: 8px;
-        }
-        .qr-img {
-            max-width: 100%;
-            height: auto;
-        }
-        .comment-img {
-            width: 100%;
-            height: auto;
-            border-radius: 50%; /* Asumiendo que los comentarios suelen ser avatares, si no, quítalo */
-            border: 2px solid #ddd;
-        }
-        /* Para centrar los controles del carrusel de comentarios fuera de la imagen */
-        .carousel-control-prev, .carousel-control-next {
-            filter: invert(100%); /* Hace las flechas negras para fondo blanco */
-            width: 5%;
-        }
-    </style>
+    <link rel="stylesheet" href="./public/css/index.css">
 </head>
 <body>
 
