--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                     <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="/images/Home1.jpeg" class="d-block img-cover" alt="Slide 0">
+                                <img src="./public/assets/images/Home1.jpeg" class="d-block img-cover" alt="Slide 0">
                             </div>
                             <div class="carousel-item">
-                                <img src="/images/Home2.jpeg" class="d-block img-cover" alt="Slide 1">
+                                <img src="./public/assets/images/Home2.jpg" class="d-block img-cover" alt="Slide 1">
                             </div>
                             <div class="carousel-item">
-                                <img src="/images/Home3.jpeg" class="d-block img-cover" alt="Slide 2">
+                                <img src="./public/assets/images/Home3.jpg" class="d-block img-cover" alt="Slide 2">
                             </div>
                         </div>
                     </div>
@@ -47,19 +47,19 @@
             <div class="row">
                 <div class="col-4">
                     <div class="p-2">
-                        <img src="/images/Obj1.jpeg" class="obj-img mb-3" alt="Objetivo 1">
+                        <img src="./public/assets/images/Obj1.jpg" class="obj-img mb-3" alt="Objetivo 1">
                         <p>Brindar ayuda directa a personas y animales vulnerables.</p>
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="p-2">
-                        <img src="/images/Obj2.jpeg" class="obj-img mb-3" alt="Objetivo 2">
+                        <img src="./public/assets/images/Obj2.png" class="obj-img mb-3" alt="Objetivo 2">
                         <p>Promover la solidaridad y participación de la comunidad.</p>
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="p-2">
-                        <img src="/images/Obj3.jpeg" class="obj-img mb-3" alt="Objetivo 3">
+                        <img src="./public/assets/images/Obj3.jpg" class="obj-img mb-3" alt="Objetivo 3">
                         <p>Organizar donaciones y recursos para maximizar el impacto.</p>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                     </p>
                 </div>
                 <div class="col-4 text-center">
-                    <img src="/images/qr.png" class="qr-img shadow p-2 bg-white rounded" alt="Código QR">
+                    <img src="./public/assets/images/qr.webp" class="qr-img shadow p-2 bg-white rounded" alt="Código QR">
                 </div>
             </div>
         </section>
@@ -108,27 +108,13 @@
                     <div class="carousel-item active">
                         <div class="row text-center">
                             <div class="col-4">
-                                <img src="/images/comen1.png" class="comment-img" alt="Comentario 1">
+                                <img src="./public/assets/images/comen2.jpg" class="comment-img" alt="Comentario 1">
                             </div>
                             <div class="col-4">
-                                <img src="/images/comen2.png" class="comment-img" alt="Comentario 2">
+                                <img src="./public/assets/images/comen3.jpg" class="comment-img" alt="Comentario 2">
                             </div>
                             <div class="col-4">
-                                <img src="/images/comen3.png" class="comment-img" alt="Comentario 3">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="carousel-item">
-                        <div class="row text-center">
-                            <div class="col-4">
-                                <img src="/images/comen2.png" class="comment-img" alt="Comentario 4">
-                            </div>
-                            <div class="col-4">
-                                <img src="/images/comen3.png" class="comment-img" alt="Comentario 5">
-                            </div>
-                            <div class="col-4">
-                                <img src="/images/comen1.png" class="comment-img" alt="Comentario 6">
+                                <img src="./public/assets/images/comen1.webp" class="comment-img" alt="Comentario 3">
                             </div>
                         </div>
                     </div>
@@ -136,13 +122,27 @@
                     <div class="carousel-item">
                         <div class="row text-center">
                             <div class="col-4">
-                                <img src="/images/comen3.png" class="comment-img" alt="Comentario 7">
+                                <img src="./public/assets/images/comen3.jpg" class="comment-img" alt="Comentario 4">
                             </div>
                             <div class="col-4">
-                                <img src="/images/comen1.png" class="comment-img" alt="Comentario 8">
+                                <img src="./public/assets/images/comen2.jpg" class="comment-img" alt="Comentario 5">
                             </div>
                             <div class="col-4">
-                                <img src="/images/comen2.png" class="comment-img" alt="Comentario 9">
+                                <img src="./public/assets/images/comen1.webp" class="comment-img" alt="Comentario 6">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <div class="row text-center">
+                            <div class="col-4">
+                                <img src="./public/assets/images/comen1.webp" class="comment-img" alt="Comentario 7">
+                            </div>
+                            <div class="col-4">
+                                <img src="./public/assets/images/comen2.jpg" class="comment-img" alt="Comentario 8">
+                            </div>
+                            <div class="col-4">
+                                <img src="./public/assets/images/comen3.jpg" class="comment-img" alt="Comentario 9">
                             </div>
                         </div>
                     </div>
