--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
     <link rel="stylesheet" href="./public/css/index.css">
 </head>
 <body>
-
-    <div class="main-container">
+    <header>
+        <nav>
+            <h2>
+                
+            </h2>
+        </nav>
+    </header>
+    <main>
+            <div class="main-container">
 
         <section class="hero-section">
             <div class="hero-content">
@@ -114,6 +121,10 @@
         </section>
 
     </div>
+    </main>
+    <footer>
+
+    </footer>
 
     <script>
         let currentHeroIndex = 0;
