--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundación JSNS</title>
     <link rel="icon" href="./public/assets/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./public/css/index.css">
+    <link rel="stylesheet" href="./public/css/styles.css">
 </head>
 <body>
     <header>
-        <nav>
-            <h2>
-                
-            </h2>
-        </nav>
+        <div class="header-content">
+            <div class="logo">
+                <h1>Fundación JSNS</h1>
+            </div>
+            <nav class="navbar">
+                <a href="#">Inicio</a>
+                <a href="#objetivos">Objetivos</a>
+                <a href="#metodologia">Metodología</a>
+                <a href="#comentarios">Comentarios</a>
+            </nav>
+        </div>
     </header>
     <main>
             <div class="main-container">
@@ -123,7 +129,24 @@
     </div>
     </main>
     <footer>
-
+       <div class="footer-content">
+            <div class="footer-column">
+                <h3>Fundación JSNS</h3>
+                <p>Sacando una sonrisa más.</p>
+            </div>
+            <div class="footer-column">
+                <h3>Contacto</h3>
+                <p>Email: contacto@jsns.org</p>
+                <p>Teléfono: +123 456 7890</p>
+            </div>
+            <div class="footer-column">
+                <h3>Síguenos</h3>
+                <p>Facebook | Instagram | Twitter</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Fundación JSNS. Todos los derechos reservados.</p>
+        </div>
     </footer>
 
     <script>
